create first draft of create a new story

--- a/frontend/src/global.scss
+++ b/frontend/src/global.scss
@@ -58,7 +58,7 @@ body {
     position: relative;
     font-family: sans-serif, 'Ubuntu', sans-serif;
     color: var(--primary-grey);
-    background-color: #fff;
+    background-color: #fffaf7;
     line-height: 1.5;
     
     color-scheme: light; // Indicates that the content is optimized for the "light" color scheme
